--- a/index.html
+++ b/index.html
@@ -60,15 +60,12 @@
       <main>
         <section class="title-section">
           <div class="title-section-container">
-            <div class="container-content">
-              <h1 id="title">Effective Solutions for Your Business</h1>
-              <button class="button" type="button">Order Services</button>
-            </div>
+            <h1 id="title">Effective Solutions for Your Business</h1>
+            <button class="button" type="button">Order Services</button>
           </div>
         </section>
 
-        <section>
-          <div class="info-container"></div>
+        <section class="info-section section">
           <ul class="main-list">
             <li>
               <h3 class="main-subheading">Strategy</h3>
@@ -101,7 +98,7 @@
           </ul>
         </section>
 
-        <section class="team-section">
+        <section class="team-section section">
           <div class="team-container">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
@@ -136,9 +133,10 @@
           </div>
         </section>
 
-        <section class="section-portfolio">
-          <h2 class="title-portfolio">Our Portfolio</h2>
+        <section class="section-portfolio section">
           <div class="portfolio-container">
+            <h2 class="title-portfolio">Our Portfolio</h2>
+
             <ul class="list-portfolio">
               <li>
                 <img
