--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <main>
         <section class="title-section">
           <div class="title-section-container">
-            <h1 id="title">Effective Solutions for Your Business</h1>
+            <h1 id="title">Effective Solutions<br />for your Business</h1>
             <button class="button" type="button">Order Services</button>
           </div>
         </section>
@@ -104,14 +104,18 @@
             <ul class="team-list">
               <li>
                 <img class="team-images" src="./images/img-3.jpg" alt="A man" />
-                <h3 class="team-subheading">Mark Guerro</h3>
-                <p>Product Designer</p>
+                <div class="team-subheading-container">
+                  <h3 class="team-subheading">Mark Guerro</h3>
+                  <p>Product Designer</p>
+                </div>
               </li>
 
               <li>
                 <img class="team-images" src="./images/img-2.jpg" alt="A man" />
-                <h3 class="team-subheading">Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <div class="team-subheading-container">
+                  <h3 class="team-subheading">Tom Ford</h3>
+                  <p>Frontend Developer</p>
+                </div>
               </li>
 
               <li>
@@ -120,14 +124,18 @@
                   src="./images/img-1.jpg"
                   alt="A woman"
                 />
-                <h3 class="team-subheading">Camila Garcia</h3>
-                <p>Marketing</p>
+                <div class="team-subheading-container">
+                  <h3 class="team-subheading">Camila Garcia</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
 
               <li>
                 <img class="team-images" src="./images/img.jpg" alt="A man" />
-                <h3 class="team-subheading">Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <div class="team-subheading-container">
+                  <h3 class="team-subheading">Daniel Wilson</h3>
+                  <p>UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
@@ -144,8 +152,10 @@
                   src="./images/portfolio/img-5.jpg"
                   alt="Banking application picture"
                 />
-                <h3 class="portfolio-subheading">Banking App</h3>
-                <p>App</p>
+                <div class="portfolio-subheading-container">
+                  <h3 class="portfolio-subheading">Banking App</h3>
+                  <p>App</p>
+                </div>
               </li>
 
               <li>
@@ -154,8 +164,10 @@
                   src="./images/portfolio/img-4.jpg"
                   alt="Cash payment picture"
                 />
-                <h3 class="portfolio-subheading">Cashless Payment</h3>
-                <p>Marketing</p>
+                <div class="portfolio-subheading-container">
+                  <h3 class="portfolio-subheading">Cashless Payment</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
 
               <li>
@@ -164,8 +176,10 @@
                   src="./images/portfolio/img-3.jpg"
                   alt="Meditation app picture"
                 />
-                <h3 class="portfolio-subheading">Meditation App</h3>
-                <p>App</p>
+                <div class="portfolio-subheading-container">
+                  <h3 class="portfolio-subheading">Meditation App</h3>
+                  <p>App</p>
+                </div>
               </li>
 
               <li>
@@ -174,8 +188,10 @@
                   src="./images/portfolio/img-2.jpg"
                   alt="Taxi services"
                 />
-                <h3 class="portfolio-subheading">Taxi Service</h3>
-                <p>Marketing</p>
+                <div class="portfolio-subheading-container">
+                  <h3 class="portfolio-subheading">Taxi Service</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
 
               <li>
@@ -184,8 +200,10 @@
                   src="./images/portfolio/img-1.jpg"
                   alt="Screen Illustrations"
                 />
-                <h3 class="portfolio-subheading">Screen Illustrations</h3>
-                <p>Design</p>
+                <div class="portfolio-subheading-container">
+                  <h3 class="portfolio-subheading">Screen Illustrations</h3>
+                  <p>Design</p>
+                </div>
               </li>
 
               <li>
@@ -194,8 +212,10 @@
                   src="./images/portfolio/img.jpg"
                   alt="Online Courses"
                 />
-                <h3 class="portfolio-subheading">Online Courses</h3>
-                <p>Marketing</p>
+                <div class="portfolio-subheading-container">
+                  <h3 class="portfolio-subheading">Online Courses</h3>
+                  <p>Marketing</p>
+                </div>
               </li>
             </ul>
           </div>
@@ -206,8 +226,9 @@
         <div class="footer-container">
           <a class="footer-logo" href="#logo">WEB<span>STUDIO</span></a>
           <p class="footer-description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            Increase the flow of customers and<br />
+            sales for your business with digital<br />
+            marketing & growth solutions.
           </p>
         </div>
       </footer>
